finition swagger
